--- a/GMC.css
+++ b/GMC.css
@@ -8,7 +8,6 @@ font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, O
 body
 {
 background-color: white;
-background-image: url();
 }
 body
 {
@@ -60,7 +59,7 @@ color: white;
 display: flex;
 justify-content: space-evenly;
 align-items: center;
-gap: 15px;
+gap: 25px;
 }
 #login-btn
 {
@@ -514,6 +513,86 @@ text-decoration: none;
 {
   border: 0;
 }
+#item-Description1
+{
+  border-color: black;
+border-style: solid;
+border-width: 4px;
+padding: 10px;
+display: none;
+}
+#item-Description2
+{
+  border-color: black;
+border-style: solid;
+border-width: 4px;
+padding: 10px;
+display: none;
+}
+#item-Description3
+{
+  border-color: black;
+border-style: solid;
+border-width: 4px;
+padding: 10px;
+display: none;
+}
+#item-Description4
+{
+  border-color: black;
+border-style: solid;
+border-width: 4px;
+padding: 10px;
+display: none;
+}
+#prod1-div:hover
+{
+#item-Description1
+{
+  border-color: black;
+border-style: solid;
+border-width: 4px;
+padding: 10px;
+display: block;
+}
+
+}
+#prod2-div:hover
+{
+#item-Description2
+{
+  border-color: black;
+border-style: solid;
+border-width: 4px;
+padding: 10px;
+display: block;
+}
+
+}
+#prod3-div:hover
+{
+#item-Description3
+{
+  border-color: black;
+border-style: solid;
+border-width: 4px;
+padding: 10px;
+display: block;
+}
+
+}
+#prod4-div:hover
+{
+#item-Description4
+{
+  border-color: black;
+border-style: solid;
+border-width: 4px;
+padding: 10px;
+display: block;
+}
+
+}
 #add2cart-btn1
 {
 background-color: white;
@@ -929,6 +1008,213 @@ gap: 20px;
 }
 
 #invisibleC
+{
+  display: none;
+}
+
+.wishlist-div
+{
+  border-color: pink;
+  border-style: solid;
+  border-radius: 30px;
+  border-width: 4px;
+  padding: 20px;
+  margin-top: 50px;
+  margin-left: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 1250px;
+  gap: 20px;
+}
+#prod1-btn
+ {
+  height: 80px;
+  width: 80px;
+border: 0;
+}
+
+#prod1-btn img {
+  width: 100%;
+  height: 100%;
+}
+.wish-prod1
+{
+  display: flex;
+  flex-direction: row;
+  gap: 70px;
+  align-items: center;
+  padding: 7px;
+  width: fit-content;
+  border-color: black;
+  border-style: solid;
+  border-width: 2px;
+  padding-right: 40px;
+}
+
+#heart-btn1
+{
+  border: 0;
+  background-color: white;
+  height: 50px;
+  width: 50px;
+}
+#heart-btn1 img
+{
+  width: 100%;
+  height: 100%;
+}
+#heart-btn1:hover
+{
+  transform: scale(1.3);
+  transition: 0.3s;
+} 
+
+
+#prod2-btn
+ {
+  height: 80px;
+  width: 80px;
+  border: 0;
+}
+
+#prod2-btn img {
+  width: 100%;
+  height: 100%;
+}
+.wish-prod2
+{
+  display: flex;
+  flex-direction: row;
+  gap: 70px;
+  align-items: center;
+  padding: 7px;
+  width: fit-content;
+  border-color: black;
+  border-style: solid;
+  border-width: 2px;
+  padding-right: 40px;
+}
+
+#heart-btn2
+{
+  border: 0;
+  background-color: white;
+  height: 50px;
+  width: 50px;
+}
+#heart-btn2 img
+{
+  width: 100%;
+  height: 100%;
+}
+#heart-btn2:hover
+{
+  transform: scale(1.3);
+  transition: 0.3s;
+} 
+#prod3-btn
+ {
+  height: 80px;
+  width: 80px;
+border: 0;
+}
+
+#prod3-btn img {
+  width: 100%;
+  height: 100%;
+}
+.wish-prod3
+{
+  display: flex;
+  flex-direction: row;
+  gap: 70px;
+  align-items: center;
+  padding: 7px;
+  width: fit-content;
+  border-color: black;
+  border-style: solid;
+  border-width: 2px;
+  padding-right: 40px;
+}
+
+#heart-btn3
+{
+  border: 0;
+  background-color: white;
+  height: 50px;
+  width: 50px;
+}
+#heart-btn3 img
+{
+  width: 100%;
+  height: 100%;
+}
+#heart-btn3:hover
+{
+  transform: scale(1.3);
+  transition: 0.3s;
+} 
+
+#prod4-btn
+ {
+  height: 80px;
+  width: 80px;
+border: 0;
+}
+
+#prod4-btn img {
+  width: 100%;
+  height: 100%;
+}
+.wish-prod4
+{
+  display: flex;
+  flex-direction: row;
+  gap: 70px;
+  align-items: center;
+  padding: 7px;
+  width: fit-content;
+  border-color: black;
+  border-style: solid;
+  border-width: 2px;
+  padding-right: 40px;
+}
+
+#heart-btn4
+{
+  border: 0;
+  background-color: white;
+  height: 50px;
+  width: 50px;
+}
+#heart-btn4 img
+{
+  width: 100%;
+  height: 100%;
+}
+#heart-btn4:hover
+{
+  transform: scale(1.3);
+  transition: 0.3s;
+} 
+#invisW
+{
+display: none;
+}
+#invisW1
+{
+  display: none;
+}
+#invisW2
+{
+  display: none;
+}
+#invisW3
+{
+  display: none;
+}
+#invisW4
 {
   display: none;
 }
