--- a/GMC.css
+++ b/GMC.css
@@ -75,6 +75,29 @@ margin-top: 2px;
 margin-left: -10px;
 margin-left: 2px;
 }
+
+#login-btn2
+{
+  background-color: rgb(31, 31, 31);
+padding:top 0;
+border: 0;
+padding-bottom: 0;
+margin: 0;
+height: 30px;
+align-self: center;
+border-color: black;
+color: white;
+margin-top: 2px;
+margin-left: -10px;
+margin-left: 2px;
+}
+
+#login-btn2:hover {
+  transform: scale(1.2); /* This will make the button 10% bigger on hover */
+  transition: 0.3s;
+  color: lightblue;
+}
+
 #login-btn:hover {
   transform: scale(1.2); /* This will make the button 10% bigger on hover */
   transition: 0.3s;
@@ -176,6 +199,28 @@ color: white;
   color: red;
 
 }
+
+#login-div
+{
+border-color: black;
+border-style: solid;
+border-width: 3px;
+display: flex;
+justify-content: space-around;
+align-items: center;
+flex-direction: column;
+width: fit-content;
+padding: 1%;
+position: fixed;
+z-index: 1000;
+background-color: white;
+}
+
+#invisibleI
+{
+  display: none;
+}
+
 #hero
 {
   display: flex;
